Update 1.1 Add a geolocation api with js in html_Solution.html

--- a/HTML APIs/Geo-location API/Solution/1.1 Add a geolocation api with js in html_Solution.html
+++ b/HTML APIs/Geo-location API/Solution/1.1 Add a geolocation api with js in html_Solution.html
@@ -3,7 +3,7 @@
 <body>
 <link href="scripts.js">
 <p>Click the button to get your coordinates.</p>
-<button>Try It</button>
+<button onclick="getLocation()>Try It</button>
 <p id="demo"></p>
 </body>
 </html>
