Update 1.1 Add a drag and drop api.html

--- a/HTML APIs/HTML Drag & Drop API/1.1 Add a drag and drop api.html
+++ b/HTML APIs/HTML Drag & Drop API/1.1 Add a drag and drop api.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<!-- You can uncomment this line of code if you are using js in "scripts.js" file 
+<link href="scripts.js"> -->
 <style>
 #div1 {
   width: 350px;
@@ -9,6 +11,8 @@
   border: 1px solid #aaaaaa;
 }
 </style>
+ 
+<!-- Input your JS in script.js or you can add js in this html file itself. -->
 </head>
 <body>
 
